# aocla

./: .gitignore  README.md
aor1/: Cargo.toml  saved.txt  todo.txt
aor1/src/: ao1.rs  ao2.rs  ao3.rs  ao4.rs  aoclalib.rs  main.rs  min.rs  runaocla.rs  runtest2.rs  runtest3.rs  saved.txt  t1.rs
