[package]
name = "aor1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="min"
path="src/min.rs"

[[bin]]
name="runaocla"
path="src/runaocla.rs"

[[bin]]
name="test2"
path="src/runtest2.rs"

[[bin]]
name="test3"
path="src/runtest3.rs"

[[bin]]
name="t1"
path="src/t1.rs"

[dependencies]
nom = "7.1.3"

tui = "0.19"
crossterm = "0.25"
tui-textarea = { version = "*", features = ["search"] }

